--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "inquirer": "~6.3.1",
     "jsonschema": "^1.0.2",
     "jsonwebtoken": "^8.2.1",
-    "lodash": "^4.17.14",
+    "lodash": "4.17.11",
     "marked": "^0.7.0",
     "marked-terminal": "^3.3.0",
     "minimatch": "^3.0.4",
